# ResumeInsight_AI

./: README.md  ai_career_copilot_app.py  pyproject.toml
chroma_db/: chroma.sqlite3
chroma_db_streamlit/: chroma.sqlite3
